<resources>
  <string name="app_name">Tic Tac Toe</string>
  <string name="placeholder">Placeholder</string>

  <string name="login_fragment_label">Login</string>
  <string name="game_fragment_label">Tic Tac Toe: Game</string>
  <string name="dashboard_fragment_label">Tic Tac Toe: Dashboard</string>

  <string name="login">Register or Log In</string>
  <string name="logout">Log Out</string>

  <string name="new_game">New Game</string>
  <string name="email">Email</string>
  <string name="password">Password</string>

  <string name="blank"> </string>

  <string name="new_game_dialog_message">Which type of game do you want to create?</string>
  <string name="forfeit_game_dialog_message">Are you sure you want to forfeit this game?</string>

  <string name="two_player">Two-Player</string>
  <string name="one_player">One-Player</string>

  <string name="yes">Yes</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>
  <string name="register">Register</string>
  <string name="name">Name</string>
  <string name="login1">Login</string>
  <string name="new_user_register">new user? Register</string>
  <string name="existing_user_login">Existing User? Login</string>
  <string name="congratulations">Congratulations, You won the game!</string>
  <string name="won">WINNER</string>
  <string name="ok">ok</string>
  <string name="loose">LOOSER</string>
  <string name="you_lost">You Lost, better luck next time</string>
  <string name="draw">DRAW</string>
  <string name="you_drew">You drew, good game!</string>
</resources>